--- a/sites/all/themes/gxnulib/sass/components/nodes/_node-resource.scss
+++ b/sites/all/themes/gxnulib/sass/components/nodes/_node-resource.scss
@@ -29,6 +29,10 @@ and open the template in the editor.
         &:after {
             clear:both;
         }
+        
+        p {
+            text-indent: 0;
+        }
     }
     .field {
         width: 80%;
