--- a/sites/all/themes/gxnulib/css/gxnulib.styles.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.styles.css
@@ -1094,19 +1094,22 @@ and open the template in the editor.
     .view-view-culture-slideshow .views-slideshow-controls-bottom .views_slideshow_pager_field_item .views-field-counter {
       background: #333333;
       border: 1px solid #333333;
+      -moz-border-radius: 0.5em;
+      -webkit-border-radius: 0.5em;
+      border-radius: 0.5em;
       width: .5em;
       height: .5em; }
-      /* line 45, ../sass/components/slideshows/_culture-slideshow.scss */
+      /* line 46, ../sass/components/slideshows/_culture-slideshow.scss */
       .view-view-culture-slideshow .views-slideshow-controls-bottom .views_slideshow_pager_field_item .views-field-counter .views-content-counter {
         color: #333333;
         font-size: 8px;
         font-size: 0.57143rem;
         line-height: .5em; }
-  /* line 54, ../sass/components/slideshows/_culture-slideshow.scss */
+  /* line 55, ../sass/components/slideshows/_culture-slideshow.scss */
   .view-view-culture-slideshow .views-slideshow-controls-bottom .active .views-field-counter {
     background: #922525;
     border: 1px solid #922525; }
-    /* line 58, ../sass/components/slideshows/_culture-slideshow.scss */
+    /* line 59, ../sass/components/slideshows/_culture-slideshow.scss */
     .view-view-culture-slideshow .views-slideshow-controls-bottom .active .views-field-counter .views-content-counter {
       color: #922525; }
 
